Updated package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cnvrt-human-annotator",
+  "name": "cnvrt-helper-library",
   "private": true,
   "version": "0.0.0",
   "type": "module",
